I hate the wasm design, just post to a url.
there is no standard runtime interface for wasm,
so we'd build our own tooling and apis for everything.

then we'd also have to build deployment, logging, monitoring, etc..
basically rebuild half of k8s.

its cool but just not in scope.

instead just have the validators run as some standard webserver.

can bring back wasm later if it actually matters for some real use case
